--- a/index.html
+++ b/index.html
@@ -534,13 +534,72 @@
       </div>
     </footer>
     <!--MODAL-->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal-window">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-modal"></use>
           </svg>
         </button>
+
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-description"> Name </span>
+            <input
+              type="text"
+              name="user_name"
+              class="modal-form-input"
+              required
+              pattern="[a-zA-Z]+"
+              minlength="2"
+            />
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-description"> Phone </span>
+            <input
+              type="tel"
+              name="user_phone"
+              class="modal-form-input"
+              required
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="xxx-xxx-xx-xx"
+            />
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-description"> Email </span>
+            <input
+              type="email"
+              name="user_email"
+              class="modal-form-input"
+              required
+            />
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-description"> Comment </span>
+            <textarea
+              name="user_message"
+              class="modal-form-message"
+              placeholder="Text input"
+            >
+            </textarea>
+          </label>
+
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user_policy"
+            class="modal-form-check"
+          />
+          <label for="user-policy" class="modal-form-accept"
+            >I accept the terms and conditions of the
+            <a href="">Privacy Policy</a>
+          </label>
+
+          <button type="submit" class="modal-form-send">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
