--- a/index.html
+++ b/index.html
@@ -531,54 +531,96 @@
             </li>
           </ul>
         </div>
+        <div class="form-footer">
+          <p class="social-text">Subscribe</p>
+          <div class="form-footer-sub">
+            <input
+              type="email"
+              name="user_email"
+              class="form-footer-input"
+              placeholder="E-mail"
+              required
+            />
+            <button type="button" class="form-subscribe-btn">
+              Subscribe
+              <svg class="telegram-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!--MODAL-->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-modal"></use>
           </svg>
         </button>
-
+        <p class="modal-title-text">
+          Leave your contacts and we will call you back
+        </p>
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-description"> Name </span>
-            <input
-              type="text"
-              name="user_name"
-              class="modal-form-input"
-              required
-              pattern="[a-zA-Z]+"
-              minlength="2"
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user_name"
+                class="modal-form-input"
+                required
+                pattern="[a-zA-Z]+"
+                minlength="2"
+              />
+              <span class="modal-form-input-icon">
+                <svg class="modal-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </span>
+            </span>
           </label>
 
           <label class="modal-form-field">
             <span class="modal-form-description"> Phone </span>
-            <input
-              type="tel"
-              name="user_phone"
-              class="modal-form-input"
-              required
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user_phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <span class="modal-form-input-icon">
+                <svg class="modal-form-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </span>
+            </span>
           </label>
 
           <label class="modal-form-field">
             <span class="modal-form-description"> Email </span>
-            <input
-              type="email"
-              name="user_email"
-              class="modal-form-input"
-              required
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="email"
+                name="user_email"
+                class="modal-form-input"
+                required
+              />
+              <span class="modal-form-input-icon">
+                <svg class="modal-form-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </span>
+            </span>
           </label>
 
           <label class="modal-form-field">
             <span class="modal-form-description"> Comment </span>
+
             <textarea
               name="user_message"
               class="modal-form-message"
@@ -591,14 +633,14 @@
             id="user-policy"
             type="checkbox"
             name="user_policy"
-            class="modal-form-check"
+            class="modal-form-check hidden"
           />
           <label for="user-policy" class="modal-form-accept"
-            >I accept the terms and conditions of the
-            <a href="">Privacy Policy</a>
+            >I accept the terms and conditions of the&nbsp;
+            <a href="" class="user-policy-link">Privacy Policy</a>
           </label>
 
-          <button type="submit" class="modal-form-send">Send</button>
+          <button type="submit" class="modal-form-send-btn">Send</button>
         </form>
       </div>
     </div>
