--- a/portfolio.html
+++ b/portfolio.html
@@ -349,6 +349,24 @@
             </li>
           </ul>
         </div>
+        <div class="form-footer">
+          <p class="social-text">Subscribe</p>
+          <div class="form-footer-sub">
+            <input
+              type="email"
+              name="user_email"
+              class="form-footer-input"
+              placeholder="E-mail"
+              required
+            />
+            <button type="button" class="form-subscribe-btn">
+              Subscribe
+              <svg class="telegram-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
