--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         </div>
         <div class="form-footer">
           <p class="social-text">Subscribe</p>
-          <div class="form-footer-sub">
+          <form class="form-footer-sub">
             <input
               type="email"
               name="user_email"
@@ -541,13 +541,13 @@
               placeholder="E-mail"
               required
             />
-            <button type="button" class="form-subscribe-btn">
+            <button type="submit" class="form-subscribe-btn">
               Subscribe
               <svg class="telegram-icon" width="24" height="20">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
@@ -618,7 +618,7 @@
             </span>
           </label>
 
-          <label class="modal-form-field">
+          <label class="modal-form-text-field">
             <span class="modal-form-description"> Comment </span>
 
             <textarea
