--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-list-icon" width="20" height="20">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -318,7 +318,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-list-icon" width="20" height="20">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -330,7 +330,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-list-icon" width="20" height="20">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -342,7 +342,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="social-list-icon" width="20" height="20">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -351,7 +351,7 @@
         </div>
         <div class="form-footer">
           <p class="social-text">Subscribe</p>
-          <div class="form-footer-sub">
+          <form class="form-footer-sub">
             <input
               type="email"
               name="user_email"
@@ -359,13 +359,13 @@
               placeholder="E-mail"
               required
             />
-            <button type="button" class="form-subscribe-btn">
+            <button type="submit" class="form-subscribe-btn">
               Subscribe
               <svg class="telegram-icon" width="24" height="20">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
